--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 10px;
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, 20px);
+  grid-template-rows: repeat(auto-fill, 20px); */
 }
 
 .SpeedBox {
