--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,28 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 10px;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, 20px);
-  grid-template-rows: repeat(auto-fill, 20px); */
+}
+
+.gameGrid {
+  width: 600px;
+  height: 600px;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.gameGridRow {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 
 .SpeedBox {
-  width: 15%;
-  height: 15%;
+  margin: 3px;
+  flex-grow: 1;
   background-color: blue;
 }
 
